--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "highlight.js": "^11.3.1",
     "moment": "^2.29.1",
     "quasar": "^2.0.0",
-    "vue-i18n": "^9.0.0"
+    "vue": "^3.2.45",
+    "vue-i18n": "^9.0.0",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
