--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
     "highlight.js": "^11.3.1",
+    "jquery": "^3.6.1",
     "moment": "^2.29.1",
     "quasar": "^2.0.0",
     "vue": "^3.2.45",
